adição de páginas

--- a/cdi.html
+++ b/cdi.html
@@ -30,11 +30,11 @@
         <div class=" bg-degrade header-inner">
             <div class="d-flex justify-content-center text-light">
                 <div class="bounce-in-top">
-                    <h1>Selic</h1>
+                    <h1>CDI</h1>
                 </div>
             </div>
             <div class="d-flex justify-content-center ">
-                <p class="card-tax swing-in-top-fwd">Valor atual: <b>5.5%</b> </p>
+                <p class="card-tax swing-in-top-fwd">Valor atual: <b>5.4%</b> </p>
             </div>
         </div>
     </div>
@@ -44,30 +44,27 @@
             <div class="container ">
                 <div class="text-center bd-highlight mb-3">
                     <div class="text-center">
-                        <h2 class="color-gray pt-4 ">O que é a Selic?</h2>
+                        <h2 class="color-gray pt-4 ">O que é a CDI?</h2>
                     </div>
                 </div>
                 <p class="pt-4">
-                    No Brasil, a taxa Selic é a taxa média ajustada dos financiamentos diários apurados no
-                    <b class="color-blue">Sistema Especial de Liquidação e de Custódia</b> para títulos federais. Ela é
-                    obtida mediante
-                    o cálculo da taxa média ponderada e ajustada das operações de financiamento por um dia,
-                    lastreadas em títulos públicos federais e cursadas no referido sistema ou em câmaras de
-                    compensação e liquidação de ativos, na forma de operações compromissadas. </p>
-                <p>
-                    Como a taxa Selic representa a remuneração das instituições financeiras nas operações com
-                    títulos públicos, ela é comumente utilizada como um índice pelo qual as taxas de juros no
-                    Brasil se balizam. Ela é um instrumento de política monetária utilizado pelo Copom para
-                    controlar os juros no país.
-                </p>
-                <p class="pb-4">
-                    A taxa apurada no processamento noturno do Selic, que consolida as taxas praticadas durante
-                    aquele dia, é conhecida como taxa overnight do Selic, taxa Selic overnight ou taxa Selic
-                    over. Embora a taxa seja apurada diariamente, a taxa Selic é usualmente expressa em termos
-                    anuais, compondo os valores apurados nos últimos 12 meses.
-                </p>
-            </div>
+                    <b> CDI</b> é a sigla para <b class="color-blue">Certificado de Depósito Interbancário.</b> Você
+                    também
+                    pode encontrar o nome
+                    Certificado de Depósito Interbancário. Os dois nomes estão corretos, mas o Interfinanceiro é
+                    atualmente o nome oficial.
 
+                    De forma resumida, ele é uma taxa gerada a partir dos empréstimos que os bancos fazem entre si para
+                    financiar suas operações.
+
+                    Só que diferente da taxa Selic, que é formada a partir de compra e venda de títulos públicos, o CDI
+                    é formado pela compra e venda de títulos privados entre os bancos.
+
+                    O CDI e a Selic são taxas divulgadas diariamente pelo Banco Central e pela B3, a bolsa de valores
+                    brasileira. </p>
+
+            </div>
+            <p> <i> fonte: https://blog.magnetis.com.br/cdi/</i></p>
         </div>
     </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
