--- a/home.html
+++ b/home.html
@@ -39,10 +39,10 @@
                             </li>
                         </a>
                         <li>
-                            <a href="#">O que é a CDI?</a>
+                            <a href="cdi.html">O que é a CDI?</a>
                         </li>
                         <li>
-                            <a href="#">O que é IPCA</a>
+                            <a href="ipca.html">O que é IPCA</a>
                         </li>
                     </ul>
                 </li>
@@ -64,9 +64,9 @@
                         </li>
                     </ul>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#">Portfolio</a>
-                </li>
+                </li> -->
                 <li>
                     <a href="#">Contato</a>
                 </li>
@@ -117,8 +117,9 @@
             <div class="container-fluid padding-0">
                 <div class="header texture-header">
                     <h6 class="text-center">Bem vindo ao curso de: </h6>
-                    <div class="d-flex justify-content-center">
-                        <h1>Investimentos</h1>
+                    <div class="d-flex justify-content-center ">
+
+                        <h1 class="text-center">Investimentos</h1>
                         <div class="icone">
                             <img class="card-img-top" src="img/icone_site.svg" alt="Card image cap">
                         </div>
@@ -200,11 +201,13 @@
                                     <h4 class="font-weight-bold card-title color-gray">CDI</h4>
                                     <!-- Text -->
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender com a taxa Selic.</p>
+                                        entender como a CDI funciona.</p>
                                     <!-- Button -->
-                                    <button class="button">
-                                        <span>ACESSAR</span>
-                                    </button>
+                                    <a href="cdi.html">
+                                        <button class="button">
+                                            <span>ACESSAR</span>
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                             <!-- Card Narrower -->
@@ -230,7 +233,7 @@
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
                                         entender com a taxa Selic.</p>
                                     <!-- Button -->
-                                    <a href="selic.html">
+                                    <a href="ipca.html">
                                         <button class="button">
                                             <span>ACESSAR</span>
                                         </button>
