--- a/ipca.html
+++ b/ipca.html
@@ -30,7 +30,7 @@
         <div class=" bg-degrade header-inner">
             <div class="d-flex justify-content-center text-light">
                 <div class="bounce-in-top">
-                    <h1>Selic</h1>
+                    <h1>IPCA</h1>
                 </div>
             </div>
             <div class="d-flex justify-content-center ">
@@ -42,30 +42,54 @@
     <div class="container padding-0">
         <div class="content-article shadow-drop-center">
             <div class="container ">
-                <div class="text-center bd-highlight mb-3">
+                <div class="text-center bd-highlight mb-3 bd-highlight mb-3">
                     <div class="text-center">
-                        <h2 class="color-gray pt-4 ">O que é a Selic?</h2>
+                        <h2 class="color-gray pt-4">O que é a IPCA?</h2>
                     </div>
                 </div>
                 <p class="pt-4">
-                    No Brasil, a taxa Selic é a taxa média ajustada dos financiamentos diários apurados no
-                    <b class="color-blue">Sistema Especial de Liquidação e de Custódia</b> para títulos federais. Ela é
-                    obtida mediante
-                    o cálculo da taxa média ponderada e ajustada das operações de financiamento por um dia,
-                    lastreadas em títulos públicos federais e cursadas no referido sistema ou em câmaras de
-                    compensação e liquidação de ativos, na forma de operações compromissadas. </p>
+                    O <b> IPCA</b> — <b class="color-blue">Índice de Preços ao Consumidor Amplo é o índice oficial de
+                        inflação
+                        do Brasil.</b> O
+                    IPCA é
+                    calculado mensalmente pelo Instituo de Geografia e Estatística (IBGE) e reflete o custo das famílias
+                    que ganham entre 1 e 40 salários mínimos de diversas capitais brasileiras. O IPCA reflete o aumento
+                    do nível dos preços, ou seja, o quanto um conjunto de bens e serviços ficou mais caro em um
+                    determinado período. </p>
                 <p>
-                    Como a taxa Selic representa a remuneração das instituições financeiras nas operações com
-                    títulos públicos, ela é comumente utilizada como um índice pelo qual as taxas de juros no
-                    Brasil se balizam. Ela é um instrumento de política monetária utilizado pelo Copom para
-                    controlar os juros no país.
-                </p>
-                <p class="pb-4">
-                    A taxa apurada no processamento noturno do Selic, que consolida as taxas praticadas durante
-                    aquele dia, é conhecida como taxa overnight do Selic, taxa Selic overnight ou taxa Selic
-                    over. Embora a taxa seja apurada diariamente, a taxa Selic é usualmente expressa em termos
-                    anuais, compondo os valores apurados nos últimos 12 meses.
-                </p>
+                    <h3 class="color-gray pt-4 ">Como é medido o IPCA</h3>
+                    <p>
+                        Este índice é produzido pelo IBGE a partir do Sistema Nacional de Índices de Preços ao
+                        Consumidor (SNIPC). Ele analisa estabelecimentos comerciais e de prestações de serviços, em
+                        diferentes regiões metropolitanas do Brasil.
+
+                        O foco deste índice feito pelo IBGE, são os bens destinados a consumidores e suas famílias, com
+                        rendas entre 1 e 40 salários mínimos e suas despesas no mês.
+
+                        As despesas consideradas são divididas em grupos que fazem parte do orçamento familiar:
+                    </p>
+                    <ul class="ml-4">
+                        <li> Alimentação e bebidas;</li>
+                        <li>Transportes;</li>
+                        <li> Habitação;</li>
+                        <li>Saúde e cuidados pessoais;</li>
+                        <li>Despesas pessoais;</li>
+                        <li>Vestuário;</li>
+                        <li>Comunicação;</li>
+                        <li>Artigos de residência;</li>
+                        <li>Educação.</li>
+                    </ul>
+                    <p>
+                        Além da variação dos preços, também são considerados os pesos que cada uma dessas despesas
+                        possuem dentro do orçamento familiar.
+
+                        Pelos valores do IPCA dizemos que, quando ele aumenta, os preços aumentaram com mais
+                        intensidade, e quando diminui significa que os preços cresceram com menor intensidade. Se
+                        acontecerem valores negativos, houve uma deflação, ou seja, os preços realmente caíram.
+                    </p>
+
+                    <p> <i> Fonte: https://www.dicionariofinanceiro.com</i></p>
+
             </div>
 
         </div>
