atualização renda fixa

--- a/cdi.html
+++ b/cdi.html
@@ -64,7 +64,9 @@
                     brasileira. </p>
 
             </div>
-            <p> <i> fonte: https://blog.magnetis.com.br/cdi/</i></p>
+            <div class="color-gray mt-50">
+                <i> fonte: https://blog.magnetis.com.br/cdi/
+            </div>
         </div>
     </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
