--- a/ipca.html
+++ b/ipca.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center ">
-                <p class="card-tax swing-in-top-fwd">Valor atual: <b>5.5%</b> </p>
+                <!-- <p class="card-tax swing-in-top-fwd">Valor atual: <b>5.5%</b> </p> -->
             </div>
         </div>
     </div>
@@ -57,8 +57,8 @@
                     do nível dos preços, ou seja, o quanto um conjunto de bens e serviços ficou mais caro em um
                     determinado período. </p>
                 <p>
-                    <h3 class="color-gray pt-4 ">Como é medido o IPCA</h3>
-                    <p>
+                    <h5 class="color-gray mt-50 text-center">Como é medido o IPCA</h5>
+                    <p class="mt-4">
                         Este índice é produzido pelo IBGE a partir do Sistema Nacional de Índices de Preços ao
                         Consumidor (SNIPC). Ele analisa estabelecimentos comerciais e de prestações de serviços, em
                         diferentes regiões metropolitanas do Brasil.
