--- a/home.html
+++ b/home.html
@@ -60,9 +60,9 @@
                         <li>
                             <a href="#">Renda Variável</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#">Page 3</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </li>
                 <!-- <li>
@@ -73,11 +73,11 @@
                 </li>
             </ul>
 
-            <ul class="list-unstyled CTAs">
+            <!-- <ul class="list-unstyled CTAs">
                 <li>
                     <a href="index.html" class="article">Voltar ao início</a>
                 </li>
-            </ul>
+            </ul> -->
         </nav>
 
         <!-- Page Content Holder -->
@@ -117,8 +117,8 @@
 
             <div class="container-fluid padding-0">
                 <div class="header texture-header">
-                    <h6 class="text-center">Bem-vindo ao curso de: </h6>
-                    <div class="d-flex justify-content-center ">
+                    <h6 class="text-center">Bem-vindo ao guia básico de: </h6>
+                    <div class="d-flex justify-content-center">
                         <h1 class="text-center">Investimentos</h1>
                         <div class="icone">
                             <img class="card-img-top" src="img/icone_site.svg" alt="Card image cap">
@@ -174,7 +174,7 @@
                                     <h4 class="font-weight-bold card-title color-gray">Selic</h4>
                                     <!-- Text -->
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender com a taxa Selic.</p>
+                                        entender a taxa Selic.</p>
                                     <!-- Button -->
                                     <a href="selic.html">
                                         <button class="button">
@@ -234,7 +234,7 @@
                                     <h4 class="font-weight-bold card-title color-gray">IPCA</h4>
                                     <!-- Text -->
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender com a taxa Selic.</p>
+                                        entender comoo IPCA funciona.</p>
                                     <!-- Button -->
                                     <a href="ipca.html">
                                         <button class="button">
@@ -255,15 +255,16 @@
                     <div class="card mt-4">
                         <div class="row align-items-center justify-content-center">
                             <div class=" col-sm-12 col-md-2 text-center img-fluid">
-                                <!-- <img class=" img-fluid" src="img/img-passo1.png" alt="Card image cap"> -->
-                                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ihxIYc.json"
+                                <img class=" img-fluid" src="img/investiment.svg" alt="Card image cap">
+                                <!-- <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ihxIYc.json"
                                     background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay>
-                                </lottie-player>
+                                </lottie-player> -->
                             </div>
                             <div class="col-sm-12 col-md-10 ">
                                 <div class="card-body">
                                     <h3 class="color-blue ">2º passo</h3>
-                                    <p>Precisamos entender o que é <b>renda fixa</b> e <b>renda variável.</b>
+                                    <p>Agora vamos entrar na parte de investimentos então precisamos entender o que é
+                                        <b>renda fixa</b> e <b>renda variável.</b>
 
                                     </p>
                                 </div>
@@ -283,14 +284,16 @@
                                 <!-- Card content -->
                                 <div class="card-body card-body-cascade">
                                     <!-- Label -->
-                                    <h5 class="color-blue pb-2 pt-1"><i class="fas fa-piggy-bank"></i> Investimentos</h5>
+                                    <h5 class="color-blue pb-2 pt-1"><i class="fas fa-piggy-bank"></i> Investimentos
+                                    </h5>
                                     <!-- Title -->
                                     <h4 class="font-weight-bold card-title color-gray">Renda fixa</h4>
                                     <!-- Text -->
-                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender com a taxa Selic.</p>
+                                    <p class="card-text">Renda fixa é um termo que se refere a qualquer tipo de
+                                        investimento que possui regras de remuneração definidas no momento da aplicação
+                                        no título.</p>
                                     <!-- Button -->
-                                    <a href="selic.html">
+                                    <a href="renda_fixa.html">
                                         <button class="button">
                                             <span>ACESSAR</span>
                                         </button>
@@ -313,14 +316,17 @@
                                 <!-- Card content -->
                                 <div class="card-body card-body-cascade">
                                     <!-- Label -->
-                                    <h5 class="color-blue pb-2 pt-1"><i class="fas fa-piggy-bank"></i> Investimentos</h5>
+                                    <h5 class="color-blue pb-2 pt-1"><i class="fas fa-piggy-bank"></i> Investimentos
+                                    </h5>
                                     <!-- Title -->
                                     <h4 class="font-weight-bold card-title color-gray">Renda variável </h4>
                                     <!-- Text -->
-                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender como a CDI funciona.</p>
+                                    <p class="card-text">A sua remuneração ou
+                                        retorno de capital não pode ser dimensionado no momento da aplicação, podendo
+                                        variar positivamente ou negativamente.
+                                    </p>
                                     <!-- Button -->
-                                    <a href="cdi.html">
+                                    <a href="#">
                                         <button class="button">
                                             <span>ACESSAR</span>
                                         </button>
