--- a/ipca.html
+++ b/ipca.html
@@ -88,7 +88,10 @@
                         acontecerem valores negativos, houve uma deflação, ou seja, os preços realmente caíram.
                     </p>
 
-                    <p> <i> Fonte: https://www.dicionariofinanceiro.com</i></p>
+
+                    <div class="color-gray mt-50">
+                        <i> Fonte: https://www.dicionariofinanceiro.com</i>
+                    </div>
 
             </div>
 
