--- a/renda_fixa.html
+++ b/renda_fixa.html
@@ -272,7 +272,7 @@
                                                         aria-hidden="true"></span>
                                                     <span class="sr-only">Next</span>
                                                 </a>
-                                            </div>.
+                                            </div>
                                         </p>
 
                                     </div>
