--- a/home.html
+++ b/home.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
         integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
         crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
         integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/1ffaa2226d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -69,7 +70,7 @@
                     <a href="#">Portfolio</a>
                 </li> -->
                 <li>
-                    <a href="#">Contato</a>
+                    <a href="https://www.linkedin.com/in/wagner-silva-6a163555/">Contato</a>
                 </li>
             </ul>
 
@@ -96,7 +97,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button> -->
 
-                    <!-- <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto ">
                             <li class="nav-item active">
                                 <a class="nav-link text-light" href="#">Page</a>
@@ -112,6 +113,10 @@
                             </li>
                         </ul>
                     </div> -->
+
+                    <a href="https://www.linkedin.com/in/wagner-silva-6a163555/"><i
+                            class="fab fa-linkedin-in text-light"></i></a>
+
                 </div>
             </nav>
 
