--- a/cdi.html
+++ b/cdi.html
@@ -62,7 +62,22 @@
 
                     O CDI e a Selic são taxas divulgadas diariamente pelo Banco Central e pela B3, a bolsa de valores
                     brasileira. </p>
-
+                    <div class="row mt-50">
+                        <div class="col">
+                            <a href="selic.html">
+                                <button class="button">
+                                    <span><i class="fas fa-arrow-left"></i> <b class="ml-2"> Anterior </b></span>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="ipca.html">
+                                <button class="button">
+                                    <span> <b class="mr-2"> Próximo </b><i class="fas fa-arrow-right"></i></span>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
             </div>
             <div class="color-gray mt-50">
                 <i> fonte: https://blog.magnetis.com.br/cdi/
@@ -82,14 +97,14 @@
         integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(function () {
             $('#sidebarCollapse').on('click', function () {
                 $('#sidebar').toggleClass('active');
                 $(this).toggleClass('active');
             });
         });
-    </script>
+    </script> -->
 
 </body>
 
