--- a/ipca.html
+++ b/ipca.html
@@ -87,7 +87,22 @@
                         intensidade, e quando diminui significa que os preços cresceram com menor intensidade. Se
                         acontecerem valores negativos, houve uma deflação, ou seja, os preços realmente caíram.
                     </p>
-
+                    <div class="row mt-50">
+                        <div class="col">
+                            <a href="cdi.html">
+                                <button class="button">
+                                    <span><i class="fas fa-arrow-left"></i> <b class="ml-2"> Anterior </b></span>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="renda_fixa.html">
+                                <button class="button">
+                                    <span> <b class="mr-2"> Próximo </b><i class="fas fa-arrow-right"></i></span>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
 
                     <div class="color-gray mt-50">
                         <i> Fonte: https://www.dicionariofinanceiro.com</i>
