--- a/selic.html
+++ b/selic.html
@@ -67,6 +67,15 @@
                     anuais, compondo os valores apurados nos últimos 12 meses.
                 </p>
             </div>
+            <div class="row">
+                <div class="offset-md-3 col-md-6 col-sm-12">
+                    <a href="cdi.html">
+                        <button class="button">
+                            <span> <b class="mr-2"> Próximo </b><i class="fas fa-arrow-right"></i></span>
+                        </button>
+                    </a>
+                </div>
+            </div>
 
         </div>
     </div>
