--- a/cdi.html
+++ b/cdi.html
@@ -62,22 +62,22 @@
 
                     O CDI e a Selic são taxas divulgadas diariamente pelo Banco Central e pela B3, a bolsa de valores
                     brasileira. </p>
-                    <div class="row mt-50">
-                        <div class="col">
-                            <a href="selic.html">
-                                <button class="button">
-                                    <span><i class="fas fa-arrow-left"></i> <b class="ml-2"> Anterior </b></span>
-                                </button>
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="ipca.html">
-                                <button class="button">
-                                    <span> <b class="mr-2"> Próximo </b><i class="fas fa-arrow-right"></i></span>
-                                </button>
-                            </a>
-                        </div>
+                <div class="row mt-50">
+                    <div class="col">
+                        <a href="selic.html">
+                            <button class="button">
+                                <span><i class="fas fa-arrow-left"></i> <b class="ml-2"> </b></span>
+                            </button>
+                        </a>
                     </div>
+                    <div class="col">
+                        <a href="ipca.html">
+                            <button class="button">
+                                <span> <b class="mr-2"> </b><i class="fas fa-arrow-right"></i></span>
+                            </button>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="color-gray mt-50">
                 <i> fonte: https://blog.magnetis.com.br/cdi/
