--- a/ipca.html
+++ b/ipca.html
@@ -91,14 +91,14 @@
                         <div class="col">
                             <a href="cdi.html">
                                 <button class="button">
-                                    <span><i class="fas fa-arrow-left"></i> <b class="ml-2"> Anterior </b></span>
+                                    <span><i class="fas fa-arrow-left"></i> <b class="ml-2"></b></span>
                                 </button>
                             </a>
                         </div>
                         <div class="col">
                             <a href="renda_fixa.html">
                                 <button class="button">
-                                    <span> <b class="mr-2"> Próximo </b><i class="fas fa-arrow-right"></i></span>
+                                    <span> <b class="mr-2"> </b><i class="fas fa-arrow-right"></i></span>
                                 </button>
                             </a>
                         </div>
