--- a/selic.html
+++ b/selic.html
@@ -71,7 +71,7 @@
                 <div class="offset-md-3 col-md-6 col-sm-12">
                     <a href="cdi.html">
                         <button class="button">
-                            <span> <b class="mr-2"> Próximo </b><i class="fas fa-arrow-right"></i></span>
+                            <span> <b class="mr-2"></b><i class="fas fa-arrow-right"></i></span>
                         </button>
                     </a>
                 </div>
