--- a/renda_fixa.html
+++ b/renda_fixa.html
@@ -95,7 +95,7 @@
                                         <div class="row align-items-center justify-content-center">
                                             <div class="col-md-3 col-sm-12">
                                                 <img src="img/example-19.svg" alt="mulher segurando um cofrinho"
-                                                    class="card-img-top">
+                                                    class="img-fluid text-center">
 
                                             </div>
                                             <div class="col-md-9 col-sm-12 mt-4">
